crates/omega_repo/src/provider/snapshots/omega_repo__provider__openai__tests__enhance_error_github_copilot_model_not_supported.snap
---
source: crates/omega_repo/src/provider/openai.rs
expression: error_string
---
This model may not be enabled for your GitHub Copilot subscription. Visit https://github.com/settings/copilot/features to check which models are available to you.: 400 Bad Request Reason: {"error":{"message":"The requested model is not supported.","code":"model_not_supported"}}
